--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ ChatBox-Tuts@NetNinja/node_modules
 ChatBox-Tuts@NetNinja/package-lock.json
 github-battle-react-ByTyler/node_modules
 github-battle-react-ByTyler/package-lock.json
+github-battle-react-ByTyler/*.log
 WebSocketTuts@CodingTrain/node_modules
 WebSocketTuts@CodingTrain/package-lock.json
