Build GraphQL server

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ github-battle-react-ByTyler/*.log
 github-battle-react-ByTyler/dist
 WebSocketTuts@CodingTrain/node_modules
 WebSocketTuts@CodingTrain/package-lock.json
+BuildGraphQLServer/node_modules
